Fixed: removal div did not cover 100% of document. Fixed: context menu at right side of page was shown wrongly. Added context menu at right side of page to demo.html.

--- a/jquery.singleton_contextmenu.css
+++ b/jquery.singleton_contextmenu.css
@@ -19,6 +19,8 @@
     font-size:        12px;
     
     list-style-type:  none;
+	
+	min-width:        100px;
 }
 
 .singleton_contextmenu_title
@@ -86,7 +88,7 @@
     
     margin:           2px;
     
-    color: #ffffff;
+    color:            #ffffff;
 }
 
 .singleton_contextmenu_removal
@@ -95,6 +97,4 @@
     
     left:     0;
     top:      0;
-    width:    100%;
-    height:   100%;
 }
