Added default cursor to context menu title.

--- a/jquery.singleton_contextmenu.css
+++ b/jquery.singleton_contextmenu.css
@@ -49,6 +49,8 @@
     display:          block;
     
     margin:           1px;
+    
+    cursor:           default;
 }
 
 .singleton_contextmenu_menu > li > a
